Map no longer extends behind sidebar to better show centered points. Closes #30

--- a/src/NZZ/MyTownBundle/Resources/public/css/components/map.css
+++ b/src/NZZ/MyTownBundle/Resources/public/css/components/map.css
@@ -2,12 +2,12 @@
  * MAP
  * Styling for the map
  */
- #map{
-  height: 100%;
-  width: 100%;
+#map{
+  display: block;
+  height:auto;
   padding: 0;
-  margin: 0;
-  position: relative;
+  margin: 0 0 0 400px;
+  position:absolute; top:0; right:0; bottom:0; left:0;
   z-index: 100;
 }
 .leaflet-container {
